Fixed channels text layout bug

--- a/main.css
+++ b/main.css
@@ -339,21 +339,19 @@ section {
 
 .channels {
 	background-image: black;
-	display: block;
 	background-repeat: no-repeat;
 	width: 100%;
 	height: 100%;
 	background-size: cover;
-	align-items: center;
-	flex-direction: column;
 }
 .channels img {
 	width: 120px;
-	margin: 40px 0;
+	margin: 40px 55px;
 }
 .channels p {
 	color: white;
-	padding: 0 20px;
+	width: 100%;
+	padding: 0 10px;
 	text-align: center;
 	margin-bottom: 40px;
 }
